--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,10 @@ footer {
 /* Change the background colors below */
 
 @media (min-width: 768px) {
+  .col-3 {
+    width: 50%;
+    
+  }
   header {
     background-color: red;
   }
@@ -72,7 +76,8 @@ footer {
   }
 
   #column-3 {
-    background-color: white;
+    background-color: rebeccapurple;
+    width: 100%;
   }
 
   footer {
@@ -84,6 +89,11 @@ footer {
 
 /*---------- Desktops ----------*/
 @media (min-width: 1200px) {
+
+  .col-3 {
+    width: 100%;
+   
+  }
   header {
     background-color:darkred ;
   }
